--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -11,7 +11,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>MarblePhysics</RootNamespace>
+    <RootNamespace>TribalInstincts</RootNamespace>
     <ProjectGuid>{ed1b8fc6-a1e6-afcf-4aa6-191d5672db9c}</ProjectGuid>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
@@ -41,8 +41,8 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\MarblePhysics Mod Tools\Scripts\Editor\ModToolsMenu.cs" />
      <Compile Include="Assets\_StandardComponents\Motivators\Editor\PhysicsRotatorEditor.cs" />
+     <Compile Include="Assets\ModTools\Scripts\Editor\ModToolsMenu.cs" />
      <Compile Include="Assets\_StandardComponents\Motivators\Editor\PhysicsPositionOscillatorEditor.cs" />
      <None Include="Assets\UMod\Resources\Editor\Data\Readme.txt" />
      <Reference Include="UnityEngine">
