--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -42,27 +42,29 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\_StandardComponents\CameraControllers\StaticCameraController.cs" />
-     <Compile Include="Assets\_StandardComponents\Filters\MarbleFilter.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\Filters\MarbleFilter.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\MarbleCollisionHandler.cs" />
-     <Compile Include="Assets\_StandardComponents\NumberGenerators\OscillatingFloatGenerator.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\ValueUtilities\Float\OscillatingFloatGenerator.cs" />
      <Compile Include="Assets\_StandardComponents\SpawnZones\SpawnZone.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\ValueUtilities\AngleVector.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\ApplyForceTrigger.cs" />
-     <Compile Include="Assets\_StandardComponents\DoNotRotate.cs" />
-     <Compile Include="Assets\_StandardComponents\Math\MathUtils.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\DoNotRotate.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\MathUtilities\MathUtils.cs" />
      <Compile Include="Assets\_StandardComponents\CameraControllers\ICameraController.cs" />
      <Compile Include="Assets\_StandardComponents\Motivators\PhysicsRotator.cs" />
-     <Compile Include="Assets\_StandardComponents\Filters\CooldownMarbleFilter.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\Filters\CooldownMarbleFilter.cs" />
      <Compile Include="Assets\ExampleLevels\ForcefieldEscape\ForcefieldEscapeLevelRunner.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\LayerChangeTrigger.cs" />
      <Compile Include="Assets\_StandardComponents\LevelRunners\StandardLevelRunner.cs" />
-     <Compile Include="Assets\_StandardComponents\Math\Perlin.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\MathUtilities\Perlin.cs" />
      <Compile Include="Assets\_StandardComponents\Motivators\PhysicsPositionOscillator.cs" />
-     <Compile Include="Assets\_StandardComponents\NumberGenerators\CurveFloatGenerator.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\ValueUtilities\Float\CurveFloatGenerator.cs" />
      <Compile Include="Assets\TestingTools\TestGameRunner.cs" />
-     <Compile Include="Assets\_StandardComponents\NumberGenerators\FloatGenerator.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\ValueUtilities\Float\FloatGenerator.cs" />
      <Compile Include="Assets\_ModAssets\Scripts\ModdedLevelRunner.cs" />
-     <Compile Include="Assets\_StandardComponents\NumberGenerators\PerlinFloatGenerator.cs" />
+     <Compile Include="Assets\_StandardComponents\Utils\ValueUtilities\Float\PerlinFloatGenerator.cs" />
      <Compile Include="Assets\_StandardComponents\SpawnZones\ColliderSpawnZone.cs" />
+     <Compile Include="Assets\_StandardComponents\CollisionHandlers\LinearGravityTrigger.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
