--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
      <Compile Include="Assets\_StandardComponents\Utils\ValueUtilities\Float\PerlinFloatGenerator.cs" />
      <Compile Include="Assets\_StandardComponents\SpawnZones\ColliderSpawnZone.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\LinearGravityTrigger.cs" />
+     <Compile Include="Assets\_StandardComponents\CollisionHandlers\RadialGravityTrigger.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
