--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,12 +50,12 @@
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\ApplyForceTrigger.cs" />
      <Compile Include="Assets\_StandardComponents\Utils\DoNotRotate.cs" />
      <Compile Include="Assets\_StandardComponents\Utils\MathUtilities\MathUtils.cs" />
-     <Compile Include="Assets\_StandardComponents\CameraControllers\ICameraController.cs" />
+     <Compile Include="Assets\_StandardComponents\CameraControllers\CameraController.cs" />
      <Compile Include="Assets\_StandardComponents\Motivators\PhysicsRotator.cs" />
      <Compile Include="Assets\_StandardComponents\Utils\Filters\CooldownMarbleFilter.cs" />
      <Compile Include="Assets\ExampleLevels\ForcefieldEscape\ForcefieldEscapeLevelRunner.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\LayerChangeTrigger.cs" />
-     <Compile Include="Assets\_StandardComponents\LevelRunners\StandardLevelRunner.cs" />
+     <Compile Include="Assets\_StandardComponents\LevelRunners\StandardRaceLevelRunner.cs" />
      <Compile Include="Assets\_StandardComponents\Utils\MathUtilities\Perlin.cs" />
      <Compile Include="Assets\_StandardComponents\Motivators\PhysicsPositionOscillator.cs" />
      <Compile Include="Assets\_StandardComponents\Utils\ValueUtilities\Float\CurveFloatGenerator.cs" />
@@ -66,6 +66,11 @@
      <Compile Include="Assets\_StandardComponents\SpawnZones\ColliderSpawnZone.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\LinearGravityTrigger.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\RadialGravityTrigger.cs" />
+     <Compile Include="Assets\_StandardComponents\CollisionHandlers\UnityEventMarbleCollisionHandler.cs" />
+     <Compile Include="Assets\_StandardComponents\Sorters\Sorter.cs" />
+     <Compile Include="Assets\_StandardComponents\Sorters\Seats\SeatSorter.cs" />
+     <Compile Include="Assets\_StandardComponents\Sorters\Seats\Seat.cs" />
+     <Compile Include="Assets\_StandardComponents\Sorters\Seats\SeatSet.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
