--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -46,10 +46,11 @@
      <Compile Include="Assets\_StandardComponents\Motivators\Editor\PhysicsRotatorEditor.cs" />
      <Compile Include="Assets\ModTools\Scripts\Editor\ModToolsMenu.cs" />
      <Compile Include="Assets\_StandardComponents\Motivators\Editor\PhysicsPositionOscillatorEditor.cs" />
+     <Compile Include="Assets\_StandardComponents\CollisionHandlers\Editor\TeleportTriggerEditor.cs" />
      <Compile Include="Assets\_StandardComponents\Utils\Editor\VectorHandle.cs" />
      <Compile Include="Assets\_StandardComponents\CollisionHandlers\Editor\ApplyForceTriggerEditor.cs" />
-     <Compile Include="Assets\_StandardComponents\CollisionHandlers\Editor\RadialGravityTriggerEditor.cs" />
      <Compile Include="Assets\_StandardComponents\CameraControllers\Editor\StaticCameraControllerEditor.cs" />
+     <Compile Include="Assets\_StandardComponents\CollisionHandlers\Editor\RadialGravityTriggerEditor.cs" />
      <None Include="Assets\UMod\Resources\Editor\Data\Readme.txt" />
      <Reference Include="UnityEngine">
      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.1.0b8\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
