--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,8 @@
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\SpawnZones\ColliderSpawnZone.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\CollisionHandlers\LinearGravityTrigger.cs" />
      <Compile Include="Assets\TestingTools\Menu\StandardComponentMetadata.cs" />
+     <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\Utils\ValueUtilities\Position\PositionModifier.cs" />
+     <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\Utils\ValueUtilities\Position\RandomPositionModifier.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
