--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -44,21 +44,23 @@
      <Compile Include="Assets\ModTools\Scripts\Editor\ModToolsMenu.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\CollisionHandlers\LinearGravityTriggerEditor.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\CollisionHandlers\MarbleCollisionHandlerEditor.cs" />
-     <Compile Include="Assets\TestingTools\Menus\Editor\EditorIcon.cs" />
-     <Compile Include="Assets\TestingTools\Menus\StandardComponents\Editor\StandardComponentsWindow.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\EditorIcon.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\StandardComponents\StandardComponentsWindow.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\Motivators\PhysicsRotatorEditor.cs" />
-     <Compile Include="Assets\TestingTools\Menus\Editor\EditorIconConstants.cs" />
-     <Compile Include="Assets\TestingTools\Menus\StandardComponents\Editor\EditorHelper.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\EditorIconConstants.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\EditorHelper.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\CollisionHandlers\TeleportTriggerEditor.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\VectorHandle.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\CollisionHandlers\ApplyForceTriggerEditor.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\EnvironmentShaperEditor.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\Motivators\PhysicsPositionOscillatorEditor.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\CameraControllers\StaticCameraControllerEditor.cs" />
-     <Compile Include="Assets\TestingTools\Menus\StandardComponents\Editor\StandardComponentMetadataEditor.cs" />
-     <Compile Include="Assets\TestingTools\Menus\StandardComponents\Editor\StandardComponentTagManager.cs" />
-     <Compile Include="Assets\TestingTools\Menus\Alignment\Editor\AlignmentToolbar.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\StandardComponents\StandardComponentMetadataEditor.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\StandardComponents\StandardComponentTagManager.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\Toolbars\AlignmentToolbar.cs" />
      <Compile Include="Assets\TestingTools\Scripts\Editor\CollisionHandlers\RadialGravityTriggerEditor.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\Toolbars\ArrangementToolbar.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\Editor\Toolbars\EditorAlignmentUtils.cs" />
      <None Include="Assets\UMod\Resources\Editor\Data\Readme.txt" />
      <Reference Include="UnityEngine">
      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.1.0b8\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
