--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,8 +61,9 @@
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\Utils\ValueUtilities\Float\CurveFloatGenerator.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\Sorters\Seats\SeatSorter.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\SpawnZones\SpawnZone.cs" />
+     <Compile Include="Assets\TestingTools\Scripts\FPSCounter.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\WorldGen\CutVolume.cs" />
-     <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\WorldGen\EnvironmentShaper.cs" />
+     <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\WorldGen\EnvironmentCanvas.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\Utils\ValueUtilities\AngleVector.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\CollisionHandlers\ApplyForceTrigger.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\CollisionHandlers\TeleportTrigger.cs" />
@@ -76,7 +77,6 @@
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\SpawnZones\ColliderSpawnZone.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\CameraControllers\CameraController.cs" />
      <Compile Include="Assets\_ModAssets\StandardComponents\Scripts\CollisionHandlers\LinearGravityTrigger.cs" />
-     <Compile Include="Assets\TestingTools\Scripts\FPSCounter.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
